--- a/team3.html
+++ b/team3.html
@@ -22,6 +22,9 @@
       <section id="con03">con03</section>
       <section id="con04">con04</section>
     </div>
+    <div>은하 수정사항</div>
+    <div>은하 수정중</div>
+    <div>은하 집가고싶다</div>
     <footer>푸터</footer>
   </body>
 </html>
