--- a/team3.html
+++ b/team3.html
@@ -22,6 +22,11 @@
       <section id="con03">con03</section>
       <section id="con04">con04</section>
     </div>
-    <footer>하람 푸터 작업 예정입니다</footer>
+    <footer>
+      하람 푸터 작업 예정입니다
+      <div>123</div>
+      <div>123</div>
+      <div>123</div>
+    </footer>
   </body>
 </html>
