--- a/team3.html
+++ b/team3.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>logo수정완료</h1>
+      <h1>logo수정완료12311111</h1>
       <ul>
         <li>menu1수</li>
         <li>menu2정</li>
