--- a/team3.html
+++ b/team3.html
@@ -20,8 +20,8 @@
       <section id="con01">con01</section>
       <section id="con02">con02</section>
       <section id="con03">con03</section>
-      <section id="con04">con04</section>
+      <section id="con04">con04 현서 수정</section>
     </div>
-    <footer>푸터</footer>
+    <footer>푸터 푸터 푸터</footer>
   </body>
 </html>
